unpackaged/main/default/objects/Beneficial_Ownership__c/Beneficial_Ownership__c.object-meta.xml
<CustomObject>
    <label>Beneficial Ownership</label>
    <nameField>
        <displayFormat>Beneficial-{000000}</displayFormat>
        <label>Beneficial Owner</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beneficial Ownership</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>