unpackaged/main/default/objects/Beneficial_Ownership__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Beneficial Ownership</relationshipLabel>
    <relationshipName>Beneficial_Ownership</relationshipName>
    <type>Lookup</type>
</CustomField>