unpackaged/main/default/objects/Beneficial_Ownership__c/fields/Id_Country__c.field-meta.xml
<CustomField>
    <fullName>Id_Country__c</fullName>
    <label>Id Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>