unpackaged/main/default/objects/Beneficial_Ownership__c/fields/Id_Number__c.field-meta.xml
<CustomField>
    <fullName>Id_Number__c</fullName>
    <label>Id Number</label>
    <length>40</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>