unpackaged/main/default/objects/Beneficial_Ownership__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <label>Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>