unpackaged/main/default/objects/Beneficial_Ownership__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner &amp; Responsibility</fullName>
            </value>
            <value>
                <fullName>Beneficial Owner</fullName>
            </value>
            <value>
                <fullName>Significant Responsibility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>