unpackaged/main/default/objects/Beneficial_Ownership__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>Zip</label>
    <length>12</length>
    <type>Text</type>
</CustomField>